[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/ScoreScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/vapor/VaporMaterial_001.material" type="Material" id=2]
[ext_resource path="res://scripts/interface/ScorePortal.gd" type="Script" id=3]
[ext_resource path="res://scenes/CRT.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/vapor/vapor_bg_4.glb" type="PackedScene" id=5]
[ext_resource path="res://assets/vapor/vapor_bg_1.glb" type="PackedScene" id=6]
[ext_resource path="res://assets/bitshift.tres" type="Theme" id=7]
[ext_resource path="res://assets/vapor/vapor_bg_2.glb" type="PackedScene" id=8]
[ext_resource path="res://assets/vapor/vapor_bg_3.glb" type="PackedScene" id=9]
[ext_resource path="res://scripts/VaporCam.gd" type="Script" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Environment" id=5]
background_mode = 1
background_color = Color( 1, 0.372549, 0.372549, 1 )
background_energy = 15.0
tonemap_mode = 3
tonemap_exposure = 0.5
tonemap_white = 5.0
auto_exposure_enabled = true
dof_blur_far_enabled = true
dof_blur_far_transition = 10.0
dof_blur_far_amount = 0.08

[sub_resource type="PlaneMesh" id=6]

[sub_resource type="CubeMesh" id=7]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "delay"

[sub_resource type="Animation" id=11]
resource_name = "lower"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -720, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=8]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreScapeWorld:environment:background_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.372549, 0.372549, 1 ), Color( 0.372549, 1, 0.372549, 1 ), Color( 0.372549, 0.372549, 1, 1 ), Color( 0.372549, 1, 0.372549, 1 ), Color( 1, 0.372549, 0.372549, 1 ) ]
}

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 512.0
margin_top = -720.0
margin_right = 768.0
color = Color( 0.176471, 0.176471, 0.176471, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="."]

[node name="ScoreBox" type="VBoxContainer" parent="."]
margin_left = 448.0
margin_top = 72.0
margin_right = 832.0
margin_bottom = 648.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePortal" type="Button" parent="."]
visible = false
margin_left = 576.0
margin_top = 664.0
margin_right = 704.0
margin_bottom = 696.0
theme = ExtResource( 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "CONTINUE"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreScapeWorld" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="ScoreScapePlane" type="MeshInstance" parent="."]
transform = Transform( 15, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeWall1" type="Spatial" parent="."]
visible = false

[node name="ScoreScapeBox1" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -9, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox2" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -7, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox3" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -5, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox4" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -3, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox5" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -1, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox6" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 1, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox7" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 3, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox8" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 5, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox9" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 7, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox10" type="MeshInstance" parent="ScoreScapeWall1"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 9, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeWall2" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
visible = false

[node name="ScoreScapeBox1" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -9, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox2" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -7, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox3" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -5, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox4" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -3, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox5" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -1, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox6" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 1, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox7" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 3, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox8" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 5, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox9" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 7, 2, -5 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeBox10" type="MeshInstance" parent="ScoreScapeWall2"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 9, 2, -6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 2 )

[node name="ScoreScapeCam" type="Camera" parent="."]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 1, 0 )
script = ExtResource( 10 )
speed = -0.15

[node name="VaporScape" type="Spatial" parent="."]

[node name="vapor_chunk_1" type="Spatial" parent="VaporScape"]

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 6 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_2" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 6 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_3" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 160 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 6 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_4" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 240 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 6 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="ScoreScapePulse" type="AnimationPlayer" parent="."]
playback_speed = 0.75
anims/RESET = SubResource( 9 )
anims/delay = SubResource( 10 )
anims/lower = SubResource( 11 )
anims/pulse = SubResource( 8 )

[node name="CRT" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="mouse_entered" from="ScorePortal" to="ScorePortal" method="_on_ScorePortal_mouse_entered"]
[connection signal="pressed" from="ScorePortal" to="ScorePortal" method="_on_ScorePortal_pressed"]
[connection signal="animation_finished" from="ScoreScapePulse" to="." method="_on_ScoreScapePulse_animation_finished"]
